[gd_scene load_steps=13 format=3 uid="uid://x8lmoly7d6ei"]

[ext_resource type="Script" uid="uid://c2mucyahtpnkt" path="res://content/scenes/game/game.gd" id="1_1rtor"]
[ext_resource type="PackedScene" uid="uid://ciyua6j5d8shu" path="res://content/overlays/hud/hud.tscn" id="7_axvww"]
[ext_resource type="AudioStream" uid="uid://ceadi2l1376x6" path="res://common/music/ObservingTheStar.ogg" id="8_3vho3"]
[ext_resource type="PackedScene" uid="uid://cgg8586s6l5xr" path="res://content/biomes/shallows/shallows.tscn" id="8_ol851"]
[ext_resource type="PackedScene" uid="uid://c6ahc38chi0w4" path="res://components/visual_components/bounds_skirt/bounds_skirt.tscn" id="9_ccpix"]
[ext_resource type="PackedScene" uid="uid://c7xn7uk5h1ldd" path="res://content/player/player.tscn" id="10_6851e"]
[ext_resource type="PackedScene" uid="uid://h7sagg1dg0yc" path="res://components/general_components/game_camera/game_camera.tscn" id="11_781ya"]
[ext_resource type="PackedScene" uid="uid://dcr8wf7ic6r8e" path="res://components/ui_components/transition_screen/transition_screen.tscn" id="14_hb504"]
[ext_resource type="PackedScene" uid="uid://d34o2g1va8dgh" path="res://content/overlays/pause_menu/pause_menu.tscn" id="15_pkjl6"]
[ext_resource type="PackedScene" uid="uid://by7j4iutullnw" path="res://components/ui_components/dialogue_overlay/dialogue_overlay.tscn" id="16_ee6o4"]

[sub_resource type="Environment" id="Environment_pyrio"]
background_mode = 3
glow_enabled = true
glow_bloom = 0.1

[sub_resource type="AudioStreamPlaylist" id="AudioStreamPlaylist_bi85h"]
stream_count = 1
stream_0 = ExtResource("8_3vho3")

[node name="Game" type="Node2D"]
script = ExtResource("1_1rtor")
light_tint = Color(0.560784, 0.827451, 1, 1)

[node name="World" type="Node2D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="World"]
environment = SubResource("Environment_pyrio")

[node name="Darkness" type="CanvasModulate" parent="World"]
color = Color(0, 0, 0, 1)

[node name="BoundsSkirt" parent="World" instance=ExtResource("9_ccpix")]
_vertical_skirt = 8000
_horizontal_skirt = 8000

[node name="Player" parent="." instance=ExtResource("10_6851e")]
position = Vector2(4325, 2004)

[node name="GameCamera" parent="Player" instance=ExtResource("11_781ya")]
_limit_padding = 80

[node name="InnerReef" parent="." instance=ExtResource("8_ol851")]

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = SubResource("AudioStreamPlaylist_bi85h")
volume_db = -6.0
autoplay = true
bus = &"Music"

[node name="DialogueOverlay" parent="." instance=ExtResource("16_ee6o4")]
visible = false

[node name="TransitionScreen" parent="." instance=ExtResource("14_hb504")]

[node name="PauseMenu" parent="." instance=ExtResource("15_pkjl6")]
visible = false

[node name="HUD" parent="." instance=ExtResource("7_axvww")]
